--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,11 @@
 [build]
   command = "npm run build"
-  publish = ".next"
+
+[[plugins]]
+  package = "@netlify/plugin-nextjs"
 
 [build.environment]
   NEXT_TELEMETRY_DISABLED = "1"
 
-[[plugins]]
-  package = "@netlify/plugin-nextjs"
+[functions]
+  included_files = ["public/**"]
