--- a/package.json
+++ b/package.json
@@ -42,8 +42,6 @@
     "@supabase/auth-helpers-nextjs": "^0.9.0",
     "@supabase/ssr": "^0.1.0",
     "@supabase/supabase-js": "^2.39.8",
-    "@types/node": "20.6.2",
-    "@types/react": "18.2.22",
     "@types/react-dom": "18.2.7",
     "autoprefixer": "10.4.15",
     "bufferutil": "^4.0.8",
@@ -74,9 +72,13 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss": "3.3.3",
     "tailwindcss-animate": "^1.0.7",
-    "typescript": "5.2.2",
     "utf-8-validate": "^6.0.3",
     "vaul": "^0.9.9",
     "zod": "^3.23.0"
+  },
+  "devDependencies": {
+    "@types/node": "22.15.29",
+    "@types/react": "18.3.23",
+    "typescript": "5.8.3"
   }
 }
