--- a/package.json
+++ b/package.json
@@ -58,13 +58,13 @@
     "input-otp": "^1.2.4",
     "jwt-decode": "^4.0.0",
     "lucide-react": "^0.446.0",
-    "next": "13.5.1",
+    "next": "^14.1.0",
     "next-themes": "^0.3.0",
     "openai": "^4.28.0",
     "postcss": "8.4.30",
-    "react": "18.2.0",
+    "react": "^18.2.0",
     "react-day-picker": "^8.10.1",
-    "react-dom": "18.2.0",
+    "react-dom": "^18.2.0",
     "react-hook-form": "^7.53.0",
     "react-resizable-panels": "^2.1.3",
     "recharts": "^2.12.7",
