--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "cloudinary": "^2.0.3",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "critters": "^0.0.20",
     "date-fns": "^3.6.0",
     "embla-carousel-react": "^8.3.0",
     "eslint": "8.49.0",
