--- a/package.json
+++ b/package.json
@@ -1,21 +1,8 @@
 {
-  "scripts": {
-    "dev": "next dev",
-    "build": "next build",
-    "start": "next start"
-  },
   "dependencies": {
-    "next": "^14.0.0",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "sonner": "^1.4.0"
+    "critters": "^0.0.20"
   },
   "devDependencies": {
-    "@types/node": "22.15.29",
-    "@types/react": "19.1.6",
-    "typescript": "5.8.3",
-    "tailwindcss": "^3.3.0",
-    "postcss": "^8.4.31",
-    "autoprefixer": "^10.4.16"
+    "tailwindcss-animate": "^1.0.7"
   }
 }
