--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,6 +24,12 @@
     },
     "typeRoots": ["./types", "./node_modules/@types"]
   },
-  "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
+  "include": [
+    "next-env.d.ts",
+    "**/*.ts",
+    "**/*.tsx",
+    ".next/types/**/*.ts",
+    "types/react-native.d.ts"
+  ],
   "exclude": ["node_modules"]
 }
