--- a/netlify.toml
+++ b/netlify.toml
@@ -2,8 +2,14 @@
   command = "npm run build"
   publish = ".next"
 
+[build.environment]
+  NODE_VERSION = "18"
+
 [[plugins]]
   package = "@netlify/plugin-nextjs"
+
+[functions]
+  node_bundler = "esbuild"
 
 [[headers]]
   for = "/_next/static/*"
